examples/errors/type_error_1.pvl
// -*- tab-width:2 ; indent-tabs-mode:nil -*-
//:: cases TypeError1
//:: tools silicon
//:: verdict Error

class err {

 void typeerror(){
   assert 1==true;
 }
 
}
